Fixed smallthumb spacing
git-svn-id: http://svn.resourcespace.org/svn/resourcespace@148 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/wrdsnpics.css
+++ b/css/wrdsnpics.css
@@ -109,9 +109,13 @@ a:active {text-decoration:underline;}
 .ResourcePanelShell a:link, .ResourcePanelShell a:visited {text-decoration:none;}
 .ResourcePanelShell a:hover, .ResourcePanelShell a:active {text-decoration:underline;}
 
+
 .ResourcePanelShellSmall {padding:0;float: left;margin: 0px 15px 10px 0px;width: 90px;height:95px;}
+
 .ResourcePanelSmall {padding:0;margin:0;width: 90px;}
-.ResourceAlignSmall {width:90px;height:95px;text-align: center;vertical-align: middle;}
+
+.ResourceAlignSmall {width:90px;height:90px;text-align: center;vertical-align: middle;}
+
 
 .IconCollect	{width: 22px;height:12px;padding: 0;display: block;margin-left: 5px;float: right;}
 .IconEmail	{width:16px;height:12px;padding: 0;display: block;margin-left: 4px;float: right;}
